css/output.css
/* ... */
.h-\[250px\] {
  height: 250px;
}

.h-\[2px\] {
  height: 2px;
}

.h-\[75px\] {
  height: 75px;
}

.h-\[95px\] {
  height: 95px;
}

.h-\[96px\] {
  height: 96px;
}

.h-\[98px\] {
  height: 98px;
}

.h-auto {
  height: auto;
}

.h-full {
  height: 100%;
}

.min-h-screen {
  min-height: 100vh;
}

.w-\[140px\] {
  width: 140px;
}

.w-\[370px\] {
  width: 370px;
}

.w-\[60px\] {
  width: 60px;
}

.w-\[96px\] {
  width: 96px;
}

.w-auto {
  width: auto;
}

.w-fit {
  width: -moz-fit-content;
  width: fit-content;
}

.w-full {
  width: 100%;
}

.w-\[100px\] {
  width: 100px;
}

.max-w-\[150px\] {
  max-width: 150px;
}

.max-w-\[250px\] {
  max-width: 250px;
}

.grow {
  flex-grow: 1;
}

.border-collapse {
  border-collapse: collapse;
}

.origin-top {
  transform-origin: top;
}

.scale-75 {
  --tw-scale-x: .75;
  --tw-scale-y: .75;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.transform {
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

@keyframes open-menu {
  0% {
    transform: scaleY(0);
  }

  80% {
    transform: scaleY(1.1);
  }

  100% {
    transform: scaleY(1);
  }
}

.animate-open-menu {
  animation: open-menu 0.35s ease-in-out forwards;
}

.cursor-pointer {
  cursor: pointer;
}

.list-inside {
  list-style-position: inside;
}

.list-decimal {
  list-style-type: decimal;
}

.list-disc {
  list-style-type: disc;
}

.grid-cols-6 {
  grid-template-columns: repeat(6, minmax(0, 1fr));
}

.grid-rows-6 {
  grid-template-rows: repeat(6, minmax(0, 1fr));
}

.flex-row {
  flex-direction: row;
}

.flex-col {
  flex-direction: column;
}

.flex-wrap {
  flex-wrap: wrap;
}

.items-start {
  align-items: flex-start;
}

.items-center {
  align-items: center;
}

.justify-start {
  justify-content: flex-start;
}

.justify-end {
  justify-content: flex-end;
}

.justify-center {
  justify-content: center;
}

.justify-between {
  justify-content: space-between;
}

.justify-items-center {
  justify-items: center;
}

.gap-1 {
  gap: 0.25rem;
}

.gap-2 {
  gap: 0.5rem;
}

.gap-3 {
  gap: 0.75rem;
}

.gap-4 {
  gap: 1rem;
}

.gap-5 {
  gap: 1.25rem;
}

.gap-6 {
  gap: 1.5rem;
}

.gap-8 {
  gap: 2rem;
}

.divide-y > :not([hidden]) ~ :not([hidden]) {
  --tw-divide-y-reverse: 0;
  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
}

.divide-gray-100 > :not([hidden]) ~ :not([hidden]) {
  --tw-divide-opacity: 1;
  border-color: rgb(243 244 246 / var(--tw-divide-opacity));
}

.place-self-start {
  place-self: start;
}

.self-end {
  align-self: flex-end;
}

.justify-self-end {
  justify-self: end;
}

.overflow-x-auto {
  overflow-x: auto;
}

.scroll-smooth {
  scroll-behavior: smooth;
}

.rounded {
  border-radius: 0.25rem;
}

.rounded-lg {
  border-radius: 0.5rem;
}

.rounded-xl {
  border-radius: 0.75rem;
}

.border {
  border-width: 1px;
}

.border-0 {
  border-width: 0px;
}

.border-2 {
  border-width: 2px;
}

.border-solid {
  border-style: solid;
}

.border-black {
  --tw-border-opacity: 1;
  border-color: rgb(0 0 0 / var(--tw-border-opacity));
}

.border-light-peach {
  --tw-border-opacity: 1;
  border-color: rgb(238 227 214 / var(--tw-border-opacity));
}

.border-stone-900 {
  --tw-border-opacity: 1;
  border-color: rgb(28 25 23 / var(--tw-border-opacity));
}

.border-transparent {
  border-color: transparent;
}

.bg-dark-gray {
  background-color: #625d5d57;
}

.bg-dark-gray-2 {
  background-color: #625d5d99;
}

.bg-dark-peach {
  --tw-bg-opacity: 1;
  background-color: rgb(157 122 70 / var(--tw-bg-opacity));
}

.bg-dark-red {
  --tw-bg-opacity: 1;
  background-color: rgb(48 23 27 / var(--tw-bg-opacity));
}

.bg-light-peach {
  --tw-bg-opacity: 1;
  background-color: rgb(238 227 214 / var(--tw-bg-opacity));
}

.bg-medium-gray {
  --tw-bg-opacity: 1;
  background-color: rgb(51 51 56 / var(--tw-bg-opacity));
}

.bg-medium-peach {
  --tw-bg-opacity: 1;
  background-color: rgb(194 149 90 / var(--tw-bg-opacity));
}

.bg-medium-red {
  --tw-bg-opacity: 1;
  background-color: rgb(72 24 31 / var(--tw-bg-opacity));
}

.bg-stone-600 {
  --tw-bg-opacity: 1;
  background-color: rgb(87 83 78 / var(--tw-bg-opacity));
}

.bg-stone-900 {
  --tw-bg-opacity: 1;
  background-color: rgb(28 25 23 / var(--tw-bg-opacity));
}

.bg-transparent {
  background-color: transparent;
}

.bg-white {
  --tw-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
}

.bg-yellow-500 {
  --tw-bg-opacity: 1;
  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
}

.bg-gradient-to-b {
  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
}

.from-\[\#c3d4e2\] {
  --tw-gradient-from: #c3d4e2;
  --tw-gradient-to: rgb(195 212 226 / 0);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.from-\[\#fa7e38\] {
  --tw-gradient-from: #fa7e38;
  --tw-gradient-to: rgb(250 126 56 / 0);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.from-\[\#fdd365\] {
  --tw-gradient-from: #fdd365;
  --tw-gradient-to: rgb(253 211 101 / 0);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.to-\[\#768192\] {
  --tw-gradient-to: #768192;
}

.to-\[\#fa7e38\] {
  --tw-gradient-to: #fa7e38;
}

.to-\[\#fdd365\] {
  --tw-gradient-to: #fdd365;
}

.bg-fixed {
  background-attachment: fixed;
}

.bg-clip-text {
  -webkit-background-clip: text;
          background-clip: text;
}

.object-contain {
  -o-object-fit: contain;
     object-fit: contain;
}

.object-none {
  -o-object-fit: none;
     object-fit: none;
}

.p-1 {
  padding: 0.25rem;
}

.p-2 {
  padding: 0.5rem;
}

.p-3 {
  padding: 0.75rem;
}

.p-4 {
  padding: 1rem;
}

.p-5 {
  padding: 1.25rem;
}
/* ... */

